    git://, that git-annex does not support. Silently skipping such a
    remote was confusing behavior.
  * Also display a warning message when a remote, without a known uuid,
    is located in a directory that does not currently exist, to avoid
    silently skipping such a remote.
  * repair: Improve fetching from a remote with an url in host:path format.

 -- Joey Hess <id@joeyh.name>  Mon, 04 May 2020 12:46:11 -0400

git-annex (8.20200501) upstream; urgency=medium

  * Improve git-annex's ability to find the path to its program,
    especially when it needs to run itself in another repo to upgrade it.
  * adb: Better messages when the adb command is not installed.
  * Sped up query commands that read the git-annex branch by around 9%.
  * Various speed improvements gained by using ByteStrings for git refs and
    shas.
  * Fix a potential failure to parse git config.
  * Support boolean git configs that are represented by the name of the
    setting with no value, eg "core.bare" is the same as "core.bare = true".
  * When parsing git configs, support all the documented ways to write
    true and false, including "yes", "on", "1", etc.
  * Fix --batch commands (and git-annex info) to accept absolute filenames 
    for unlocked files, which already worked for locked files.
  * Avoid repeatedly opening keys db when accessing a local git remote
    and -J is used.
  * Avoid running a large number of git cat-file child processes when run
    with a large -J value.
  * Avoid running with more git check-attr and check-ignore processes than
    there are CPU cores when run with a large -J value.
  * get --from, move --from: When used with a local git remote, these used
    to silently skip files that the location log thought were present on the
    remote, when the remote actually no longer contained them. Since that
    behavior could be surprising, now instead display a warning.
  * external special remotes: remote.name.annex-readonly=true no longer