@@ -7,6 +7,8 @@ git-annex (8.20200502) UNRELEASED; urgency=medium
     is located in a directory that does not currently exist, to avoid
     silently skipping such a remote.
   * repair: Improve fetching from a remote with an url in host:path format.
+  * sync: Avoid an ugly error message when nothing has been committed to
+    master yet and there is a synced master branch to merge from.
 
  -- Joey Hess <id@joeyh.name>  Mon, 04 May 2020 12:46:11 -0400
 
